# internal/router/buyer_router.go
@@ -21,4 +21,6 @@ func (r Router) AddBuyerRouter(rg *gin.RouterGroup, mongoDB *mongo.Database) {
 	buyerRouter.GET("/", middleware.JWTAuthMiddleWare(tokenmode.ACCESS_TOKEN), cont.GetBuyers)
 	buyerRouter.GET("/:buyer_id", middleware.JWTAuthMiddleWare(tokenmode.ACCESS_TOKEN), cont.GetBuyerByID)
 	buyerRouter.PUT("/:buyer_id", middleware.JWTAuthMiddleWare(tokenmode.ACCESS_TOKEN), cont.UpdateBuyer)
+	buyerRouter.PATCH("/:buyer_id/cart", middleware.JWTAuthMiddleWare(tokenmode.ACCESS_TOKEN), cont.UpdateProductInCart)
+
 }
